# mushroom-classification

./: .dockerignore  Dockerfile  README.md  fly.toml  predict.py  pyproject.toml  test.py  train.py
models/: model.pkl
notebooks/: EDA_model.ipynb  EDA_plus_logistic.ipynb
src/: train.py
