[project]
name = "mushroom-classification"
version = "0.1.0"
description = "Mushroom Classification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.121.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "notebook>=7.4.7",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
